Letterspacing fixes

--- a/_sass/section/_work.scss
+++ b/_sass/section/_work.scss
@@ -163,6 +163,12 @@
 	display: block;
 }
 
+
+.card__back__heading {
+	font-size: 26px;
+	line-height: 33px;
+	letter-spacing: 0;
+}
 .card__back__content {
 	font-size: 16px;
 	text-transform: uppercase;
